--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,47 @@
-django
-djangorestframework
-pillow
-unidecode
+asgiref==3.5.2
+async-timeout==4.0.2
+attrs==22.1.0
+autobahn==22.6.1
+Automat==20.2.0
+autopep8==1.6.0
+cffi==1.15.1
+channels==3.0.5
+constantly==15.1.0
+cryptography==37.0.4
+daphne==3.0.2
+Deprecated==1.2.13
+Django==4.0.6
+django-crispy-forms==1.14.0
+django-debug-toolbar==3.5.0
+django-extensions==3.2.0
+django-froala-editor==4.0.13
+django-model-utils==4.2.0
+django-redis==5.2.0
+django-taggit==3.0.0
+djangorestframework==3.13.1
+hyperlink==21.0.0
+idna==3.3
+incremental==21.3.0
+packaging==21.3
+Pillow==9.2.0
+psycopg2==2.9.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.9.0
+pycparser==2.21
+pyOpenSSL==22.0.0
+pyparsing==3.0.9
+pytz==2022.1
+redis==4.3.4
+service-identity==21.1.0
+six==1.16.0
+sqlparse==0.4.2
+toml==0.10.2
+Twisted==22.4.0
+twisted-iocpsupport==1.0.2
+txaio==22.2.1
+typing_extensions==4.3.0
+tzdata==2022.1
+Unidecode==1.3.4
+wrapt==1.14.1
+zope.interface==5.4.0
